--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
        [ 'Morocco', 'Japan', 3 ]
     ]);
 
+var colors = ['#a6cee3',        // Custom color palette for sankey links.
+      '#1f78b4',        // Nodes will cycle through this palette];
     // Set chart options
     var options = {
       width: 1200,
       sankey: {
-        colors: [
-      '#a6cee3',        // Custom color palette for sankey links.
-      '#1f78b4',        // Nodes will cycle through this palette
-    ]
+        node: {
+          colors: colors
+        }
       }
     };
 
