--- a/index.html
+++ b/index.html
@@ -1,81 +1,85 @@
-<html>
+<head>
+  <style> body {
+          margin: 0;
+      } </style>
+
+  <script src="//unpkg.com/three"></script>
+  <script src="//unpkg.com/three-spritetext"></script>
+  <script src="//unpkg.com/3d-force-graph"></script>
+  <!--<script src="../../dist/3d-force-graph.js"></script>-->
+</head>
+
 <body>
- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<div id="3d-graph"></div>
 
-<div id="sankey_multiple" style="width: 900px; height: 300px;"></div>
-
-<script type="text/javascript">
-  google.charts.load("current", {packages:["sankey"]});
-  google.charts.setOnLoadCallback(drawChart);
-   function drawChart() {
-    var data = new google.visualization.DataTable();
-    data.addColumn('string', 'From');
-    data.addColumn('string', 'To');
-    data.addColumn('number', 'Weight');
-    data.addRows([
-       [ 'Brazil', 'Portugal', 5 ],
-       [ 'Brazil', 'France', 1 ],
-       [ 'Brazil', 'Spain', 1 ],
-       [ 'Brazil', 'England', 1 ],
-       [ 'Canada', 'Portugal', 1 ],
-       [ 'Canada', 'France', 5 ],
-       [ 'Canada', 'England', 1 ],
-       [ 'Mexico', 'Portugal', 1 ],
-       [ 'Mexico', 'France', 1 ],
-       [ 'Mexico', 'Spain', 5 ],
-       [ 'Mexico', 'England', 1 ],
-       [ 'USA', 'Portugal', 1 ],
-       [ 'USA', 'France', 1 ],
-       [ 'USA', 'Spain', 1 ],
-       [ 'USA', 'England', 5 ],
-       [ 'Portugal', 'Angola', 2 ],
-       [ 'Portugal', 'Senegal', 1 ],
-       [ 'Portugal', 'Morocco', 1 ],
-       [ 'Portugal', 'South Africa', 3 ],
-       [ 'France', 'Angola', 1 ],
-       [ 'France', 'Senegal', 3 ],
-       [ 'France', 'Mali', 3 ],
-       [ 'France', 'Morocco', 3 ],
-       [ 'France', 'South Africa', 1 ],
-       [ 'Spain', 'Senegal', 1 ],
-       [ 'Spain', 'Morocco', 3 ],
-       [ 'Spain', 'South Africa', 1 ],
-       [ 'England', 'Angola', 1 ],
-       [ 'England', 'Senegal', 1 ],
-       [ 'England', 'Morocco', 2 ],
-       [ 'England', 'South Africa', 7 ],
-       [ 'South Africa', 'China', 5 ],
-       [ 'South Africa', 'India', 1 ],
-       [ 'South Africa', 'Japan', 3 ],
-       [ 'Angola', 'China', 5 ],
-       [ 'Angola', 'India', 1 ],
-       [ 'Angola', 'Japan', 3 ],
-       [ 'Senegal', 'China', 5 ],
-       [ 'Senegal', 'India', 1 ],
-       [ 'Senegal', 'Japan', 3 ],
-       [ 'Mali', 'China', 5 ],
-       [ 'Mali', 'India', 1 ],
-       [ 'Mali', 'Japan', 3 ],
-       [ 'Morocco', 'China', 5 ],
-       [ 'Morocco', 'India', 1 ],
-       [ 'Morocco', 'Japan', 3 ]
-    ]);
-
-var colors = ['#a6cee3',        // Custom color palette for sankey links.
-      '#1f78b4'];
-    var options = {
-      width: 1200,
-      sankey: {
-        node: {
-          colors: colors
-        }
-      }
+<script>
+    // Random tree
+    const gData = {
+        nodes: [
+            {id: "EC2 Image", group: 3},
+            {id: "Launch Configuration", group: 4},
+            {id: "Launch Template Version", group: 4},
+            {id: "Launch Template", group: 4},
+            {id: "AutoScaling Group", group: 2},
+            {id: "Scaling Activity", group: 2},
+            {id: "EC2 Instance", group: 3},
+            {id: "InstanceType", group: 3},
+            {id: "Beanstalk Configuration Settings", group: 1},
+            {id: "Beanstalk Application Environment", group: 1},
+            {id: "EC2 Price", group: 3},
+            {id: "Region", group: 5},
+            {id: "Beanstalk Application", group: 1},
+            {id: "Beanstalk Application Version", group: 1},
+        ],
+        links: [
+            {"source": "Launch Configuration", "target": "EC2 Image", value: 1, "text": "USES_IMAGE"},
+            {"source": "Launch Template Version", "target": "EC2 Image", value: 1, "text": "USES_IMAGE"},
+            {"source": "Beanstalk Application Version", "target": "Beanstalk Application", value: 1, "text": "OF_APP"},
+            {"source": "Beanstalk Application", "target": "Beanstalk Application Version", value: 1, "text": "HAS_VERSION"},
+            {"source": "Beanstalk Application", "target": "Beanstalk Application Environment", value: 1, "text": "HAS_ENVIRONMENT"},
+            {"source": "Beanstalk Application Environment", "target": "Beanstalk Configuration Settings", value: 1, "text": "HAS_CONFIGURATION"},
+            {"source": "Beanstalk Configuration Settings", "target": "AutoScaling Group", value: 1, "text": "USE_ASG"},
+            {"source": "AutoScaling Group", "target": "Scaling Activity", value: 1, "text": "HAS_SCALING_ACTIVITY"},
+            {"source": "AutoScaling Group", "target": "Launch Template Version", value: 1, "text": "HAS_LAUNCH_TEMPLATE_VERSION"},
+            {"source": "AutoScaling Group", "target": "Launch Template", value: 1, "text": "HAS_LAUNCH_TEMPLATE"},
+            {"source": "AutoScaling Group", "target": "Launch Configuration", value: 1, "text": "HAS_LAUNCH_CONFIG"},
+            {"source": "Launch Template", "target": "Launch Template Version", value: 1, "text": "HAS_VERSION"},
+            {"source": "Launch Template Version", "target": "Launch Template", value: 1, "text": "OF_TEMPLATE"},
+            {"source": "Launch Template Version", "target": "InstanceType", value: 1, "text": "HAS_TYPE"},
+            {"source": "Launch Template", "target": "InstanceType", value: 1, "text": "HAS_TYPE"},
+            {"source": "Launch Configuration", "target": "InstanceType", value: 1, "text": "HAS_TYPE"},
+            {"source": "AutoScaling Group", "target": "EC2 Instance", value: 1, "text": "HAS_INSTANCE"},
+            {"source": "EC2 Instance", "target": "AutoScaling Group", value: 1, "text": "PART_OF_ASG"},
+            {"source": "EC2 Instance", "target": "InstanceType", value: 1, "text": "HAS_TYPE"},
+            {"source": "EC2 Instance", "target": "Region", value: 1, "text": "IN_REGION"},
+            {"source": "EC2 Price", "target": "Region", value: 1, "text": "IN_REGION"},
+            {"source": "EC2 Price", "target": "InstanceType", value: 1, "text": "HAS_TYPE"},
+            {"source": "EC2 Price", "target": "EC2 Image", value: 1, "text": "PRICE_OF"},
+        ]
     };
 
-    // Instantiate and draw our chart, passing in some options.
-    var chart = new google.visualization.Sankey(document.getElementById('sankey_multiple'));
-    chart.draw(data, options);
-   }
+    const Graph = ForceGraph3D()
+    (document.getElementById('3d-graph'))
+        .graphData(gData)
+        .nodeLabel('id')
+        .nodeAutoColorBy('group')
+        .linkThreeObjectExtend(true)
+        .linkThreeObject(link => {
+            // extend link with text sprite
+            const sprite = new SpriteText(link.text);
+            sprite.color = 'lightgrey';
+            sprite.textHeight = 1.5;
+            return sprite;
+        })
+        .linkPositionUpdate((sprite, { start, end }) => {
+            const middlePos = Object.assign(...['x', 'y', 'z'].map(c => ({
+                [c]: start[c] + (end[c] - start[c]) / 2 // calc middle point
+            })));
+
+            // Position sprite
+            Object.assign(sprite.position, middlePos);
+        });
+    // Spread nodes a little wider
+    Graph.d3Force('charge').strength(-120);
 </script>
 </body>
-</html>
