--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
             {source: "Launch Template Version", target:"InstanceType", value: 1, "text": "HAS_TYPE"},
             {source: "Launch Template", target:"InstanceType", value: 1, "text": "HAS_TYPE"},
             {source: "Launch Configuration", target:"InstanceType", value: 1, "text": "HAS_TYPE"},
-            {source: "AutoScaling Group", target:"EC2 Instance", value: 1, "text": "HAS_INSTANCE"},
-            {source: "EC2 Instance", target:"AutoScaling Group", value: 1, "text": "PART_OF_ASG"},
+            {source: "AutoScaling Group", target:"EC2 Instance", value: 1, "text": "HAS_INSTANCE / PART_OF_ASG"},
             {source: "EC2 Instance", target:"InstanceType", value: 1, "text": "HAS_TYPE"}
         ]
     };
